--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
           npx honkit build
   
       - name: Initalize cargo?
-        run:  . "$HOME/.cargo/env"
+        run:  echo "source $HOME/.cargo/env" >> "$HOME/.profile
       
       - name: Run Scons
         run: scons -kQ
