--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,4 @@ jobs:
           npx honkit build
   
       - name: Initalize cargo and run SCons
-        run:  export PATH="$PATH:$HOME/.cargo/bin" && scons -Q
+        run:  export PATH="$PATH:/root/.cargo/bin" && scons -Q
