six question marks

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,5 +26,5 @@ jobs:
           ls -lah
           whoami
           printenv
-          ps -p $$
+          . "/root/.cargo/env"
           scons -Q
