--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
   
       - name: Initalize cargo and run SCons
         run:  |
-          export $HOME=/root
+          export HOME=/root
           ls -lah
           whoami
           printenv
