--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,11 @@ jobs:
         shell: bash --rcfile /root/.bashrc -eo pipefail {0} 
     steps:
       - name: Redefine what home is
-        run: export HOME=/root
+        run: | 
+          printenv
+          export HOME=/root
+          printenv
+
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -25,5 +29,9 @@ jobs:
   
       - name: Initalize cargo and run SCons
         run:  |
+          ls -lah
+          whoami
+          printenv
           . "/root/.cargo/env"
+          printenv
           scons -Q
