--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,12 +11,6 @@ jobs:
       run:
         shell: bash --rcfile /root/.bashrc -eo pipefail {0} 
     steps:
-      - name: Redefine what home is
-        run: | 
-          printenv
-          export HOME=/root
-          printenv
-
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -29,9 +23,6 @@ jobs:
   
       - name: Initalize cargo and run SCons
         run:  |
-          ls -lah
-          whoami
-          printenv
-          . "/root/.cargo/env"
-          printenv
+          export HOME=/root
+          . "$HOME/.cargo/env"
           scons -Q
