--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,10 +4,8 @@ on: pull_request
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      HOME: /root
     container:
-      options: --entrypoint /bin/bash --user 0 -e "HOME=/root"
+      options: --entrypoint /bin/bash --user 0 
       image: ghcr.io/algorithm-archivists/aaa-langs:latest
       env:
         HOME: /root
@@ -15,12 +13,6 @@ jobs:
       run:
         shell: bash --rcfile /root/.bashrc -eo pipefail {0} 
     steps:
-      - name: Redefine what home is
-        run: | 
-          printenv
-          export HOME=/root
-          echo
-          printenv
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -32,9 +24,5 @@ jobs:
           npx honkit build
   
       - name: Initalize cargo and run SCons
-        env:
-          HOME: /root
         run:  |
-          printenv
-          . "$HOME/.cargo/env"
           scons -Q
