--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
           npx honkit build
           
       - name: Initalize cargo and run SCons
+        paths-ignore:
+        - '**.md'
         env:
           HOME: /root
         run:  |
